10151
Just pushed another commit to carry a list of errors out of the cone-of-silence.
```
% qbin/scalac test/files/neg/t7895b.scala
test/files/neg/t7895b.scala:4: error: not found: value a
  foo(a, b)
      ^
test/files/neg/t7895b.scala:4: error: not found: value b
  foo(a, b)
         ^
```

I was following the path of least resistance so the code could be a bit better polished, and I'm yet to survey the updates to .check files.
